Fix background overflow problem in sidebar

--- a/src/SourceIndexServer/wwwroot/styles.css
+++ b/src/SourceIndexServer/wwwroot/styles.css
@@ -1,4 +1,8 @@
-﻿body {
+﻿html {
+    display: flex;
+}
+
+body {
     font-family: Segoe UI, Tahoma, Helvetica, sans-serif;
     cursor: text;
     margin: 0px;
